# movie-recommendation-system

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
airflow/: Dockerfile  requirements.txt
airflow/dags/: dag.py
data/: 1-load_data.py  2-preprocess_data.py  3-update_movie_data.py  load_data.py
data/preprocessed/: tmdb_5000_movies.csv.dvc
data/raw/: tmdb_5000_credits.csv.dvc  tmdb_5000_movies.csv.dvc
db/: 1-load_movies.py  2-generate_embeddings.py  2-update_movies_poster.py  3-remove_movies_no_poster.py  4-generate_embeddings.py  database.py  init_db.py  models.py  recommend.py
deployments/mlflow/: .env.example  mlflow.yml
deployments/resources/: .env.example  nixpacks.toml  resources.yml  start.sh
deployments/webapp/: .env.example  Dockerfile  webapp.yml
experiments/: experiment_openai.py  openai_models.py
mlflow_experiments/: exp_openai.py
tests/: test1.py
webapp/: main.py
webapp/templates/: index.html  movie_detail.html
